--- a/src/Presentation/ChamedoonWebUI/wwwroot/css/site.css
+++ b/src/Presentation/ChamedoonWebUI/wwwroot/css/site.css
@@ -97,6 +97,8 @@ body {
     margin-top: 0.65rem;
     inset-inline-end: 0;
     inset-inline-start: auto;
+    direction: rtl;
+    text-align: right;
 }
 
 .user-menu-dropdown .dropdown-item {
